# MIST

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  TODO.md  interactor.py  interactor2.py  test.py  testImport.txt
agent/: pyproject.toml
agent/scripts/: run_repl.sh
agent/src/mist_agent/: __init__.py  agent.py  aggregate.py  commands.py  db.py  event_command.py  event_store.py  extraction.py  main.py  manifest.py  migrate.py  mist.tcss  notes.py  ollama_client.py  persona_command.py  profile_command.py  prompts.py  respond.py  settings.py  storage.py  summarize.py  synthesis.py  task_command.py  task_store.py  tui.py  util.py  view_command.py
agent/src/mist_agent/widgets/: chat.py  topics.py
agent/tests/: test_agent.py
agents/notes/: pyproject.toml
agents/notes/src/notes_agent/: __init__.py  agent.py  aggregate.py  commands.py  manifest.py  notes.py  prompts.py  synthesis.py
agents/notes/tests/: test_aggregate.py  test_commands.py  test_notes.py
agents/science/: pyproject.toml
agents/science/src/science_agent/: __init__.py  agent.py  commands.py  manifest.py
agents/science/src/science_agent/apis/: __init__.py
agents/science/tests/: test_apis.py  test_commands.py
archive/: TODO.md
archive/broker/: pyproject.toml
archive/broker/src/mist_broker/: broker.py  main.py  registry.py  router.py
archive/broker/tests/: test_integration.py  test_router.py  test_services.py
archive/core/: pyproject.toml
archive/server/: app.py  pyproject.toml
archive/tui/: pyproject.toml
archive/tui/src/mist_tui/: __init__.py  app.py  broker_client.py  discovery.py  mist_tui.tcss  process_manager.py
archive/tui/src/mist_tui/screens/: editor_screen.py  launcher.py
archive/tui/src/mist_tui/widgets/: __init__.py  chat.py  editor.py
archive/tui/tests/: conftest.py  test_editor_screen.py  test_integration.py  test_notes_panel.py  test_side_panel_editor.py
broker/tests/: conftest.py  test_llm_service.py  test_registry.py
client/: pyproject.toml
client/tests/: test_agent_base.py  test_client.py  test_manifest.py  (+1 more)
core/: pyproject.toml
core/examples/: echo_agent.py
core/src/mist_core/: __init__.py  db.py  main.py  ollama_client.py  paths.py  protocol.py  settings.py  storage.py  task_store.py  transport.py  types.py
core/src/mist_core/admin/: __init__.py  agent.py  extraction.py  prompts.py
core/src/mist_core/broker/: __init__.py  registry.py  router.py  services.py
core/src/mist_core/llm/: __init__.py  client.py  queue.py
core/src/mist_core/storage/: __init__.py  articles.py  events.py  logs.py  notes.py  settings.py  tasks.py
core/tests/: test_admin.py  test_articles.py  test_db.py  test_events.py  test_extraction.py  test_integration.py  test_llm_queue.py  test_logs.py  test_notes.py  test_paths.py  test_protocol.py  test_registry.py  test_router.py  test_routing.py  test_services.py  test_settings.py  test_tasks.py  test_transport.py
data/: agentJournal.md  mist.db
science/: pyproject.toml
science/src/science_agent/: agent.py  commands.py  review.py
science/src/science_agent/widgets/: library.py
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+110 files in other folders)
