[project]
name = "science-agent"
version = "2.0.0"
description = "MIST science agent — article search and library management"
requires-python = ">=3.12"
dependencies = [
    "mist-client",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
