[project]
name = "mist-tui"
version = "0.1.0"
description = "MIST TUI: Textual layout shell with broker-connected widgets"
requires-python = ">=3.13"
dependencies = ["mist-core", "textual"]

[project.scripts]
mist-tui = "mist_tui.main:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
